--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
               />
             </div>
             <h3 class="font-semibold text-xl text-dark mt-5 mb-3">
-              Apps empat Damara Bachtiar
+              Re-Design App Peduli Lindungi
             </h3>
             <p class="font-medium text-base text-secondary">
               Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio
