--- a/index.html
+++ b/index.html
@@ -621,21 +621,21 @@ Final Liga Champions harus ditunda selama 36 menit dari jadwal awal. UEFA mengam
                 <a
                   href="#"
                   class="inline-block text-base hover:text-primary mb-3"
-                  >Programming</a
+                  >Belajar Flutter</a
                 >
               </li>
               <li>
                 <a
                   href="#"
                   class="inline-block text-base hover:text-primary mb-3"
-                  >Jaringan Mikrotik</a
+                  >Mikrotik MTCNA</a
                 >
               </li>
               <li>
                 <a
                   href="#"
                   class="inline-block text-base hover:text-primary mb-3"
-                  >Bermain Gegenpressing</a
+                  >Final UCL 2021/2022</a
                 >
               </li>
             </ul>
